[metadata]
name = boappa_connect
author = lucasnapik98
summary = Library to read data from the Boappa Api
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
python_requires = >= 3.8
home_page = https://github.com/lucasnapik98/boappa_connect
project_urls =
    Bug Tracker = https://github.com/lucasnapik98/boappa_connect/issues
    Source Code = https://github.com/lucasnapik98/boappa_connect
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    Boappa
    home automation

[files]
packages =
    boappa_connect

[entry_points]
console_scripts =
    boappaconnect = boappa_connect.cli:main

[options]
install_requires =
    httpx
    pycryptodome>=3.4
    pyjwt>=2.1.0

[options.extras_require]
china =
    Pillow

[options.package_data]
boappa_connect =
    py.typed
    boappa_connect/tests/responses/*